welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Int(100)
 required: Boolean
  return (10 < m < 100) || (m == 200)
                   ^